--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          background-color: black;
          text-align:center;
      }
-     #start1,#start2{
+     #start1,#start2,#start3, #start4, #start5{
          font-size:40px;font-family: fantasy;
          padding-top: 10px;
          height: 140px;
@@ -23,21 +23,39 @@
          transition: .35s;
              }
              
-                    #start1:hover,#start2:hover{
+                    #start1:hover,#start2:hover,#start3:hover,#start4:hover,#start5:hover{
                         height: 160px;
          width:420px;box-shadow: 0px 0px 50px rgb(221, 245, 5);color:black;background-color: yellow;
                     }
                     #start1{
                         position: absolute;
-         top:50%;
+         top:15%;
          left:30%;
-         transform: translate(-50%, -80%);
+         transform: translate(-50%, -50%);
                     }
                     #start2{
                         position: absolute;
-         top:50%;
+         top:15%;
          left:70%;
-         transform: translate(-50%, -80%);
+         transform: translate(-50%, -50%);
+                    }
+                    #start3{
+                        position: absolute;
+         top:45%;
+         left:30%;
+         transform: translate(-50%, -50%);
+                    }
+                    #start4{
+                        position: absolute;
+         top:45%;
+         left:70%;
+         transform: translate(-50%, -50%);
+                    }
+                    #start5{
+                        position: absolute;
+         top:75%;
+         left:50%;
+         transform: translate(-50%, -50%);
                     }
      </style> 
      
@@ -61,8 +79,13 @@
 
 
 <body    >
- <a href="LINKS/stonepaperscissors.html"<div id="start1" >START ROCK PAPER SCISSOR</div></a> 
-  <a href="LINKS/tic tac toe.html"<div id="start2" >START TIC TAC TOE</div></a> 
+ <a href="LINKS/stonepaperscissors.html"<div id="start1" >PLAY ROCK PAPER SCISSOR</div></a> 
+  <a href="LINKS/tic tac toe.html"<div id="start2" >PLAY TIC TAC TOE</div></a> 
+    <a href="LINKS/flappy_bird_game_html_javascript.html"<div id="start3" >PLAY FLAPPY BIRD</div></a> 
+    <a href="LINKS/snake_game_html_javascript.html"<div id="start4" >PLAY SNAKE XENZIA</div></a> 
+    <a href="pinball_game_hmtl_javascript.html"<div id="start5" >PLAY SNAKE XENZIA</div></a> 
+
+
   
 </body>
 </html>
